--- a/index.html
+++ b/index.html
@@ -6,19 +6,68 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <h1>Wheel</h1>
    <section class="container">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card">
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
+    <div class="card">
+        <h2 class="Card-Header">Jit</h2>
+        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
+        <h3 class="card-price">$3.99</h3>
+    </div>
    </section>
     
 </body>
