--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+  <style>
+     .card-img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+     }
+
+  </style>
 <body>
   <h1>Wheel</h1>
    <section class="container">
