--- a/index.html
+++ b/index.html
@@ -22,59 +22,59 @@
         <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Jit</h2>
-        <img class="card-img" src="img/candy2.jpg" alt="Wheel" />
-        <h3 class="card-price">$3.99</h3>
+        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
+        <h3 class="card-price">$399</h3>
     </div>
    </section>
     
