--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 
   </style>
 <body>
-  <h1>Wheel</h1>
+  <h1>The Wheel Store</h1>
+  <p>We Sell the Best Wheels in the World</p>
    <section class="container">
     <div class="card">
         <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
+        <a href="https://www.amazon.com/Electric-Wheelchair-Wheel-Polyurethane-Wheels/dp/B0CSPMVXDS">
         <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
-        <h3 class="card-price">$399</h3>
+        </a>
+        <h3 class="card-price">$54.01</h3>
     </div>
     <div class="card">
         <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
