--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
         <h3 class="card-price">$209.00</h3>
     </div>
     <div class="card">
-        <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
-        <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
-        <h3 class="card-price">$399</h3>
+        <h2 class="Card-Header">14inch Motocycle Wheel</h2>
+        <a href="https://www.amazon.com/Motorcycle-Wheel-100-14-Assembly-Monkey/dp/B0BP6BWVD3?th=1">
+        <img class="card-img" src="https://m.media-amazon.com/images/I/71UON4G18aL._AC_SX466_.jpg" alt="Wheel" />
+        </a>
+        <h3 class="card-price">$74.98</h3>
     </div>
    </section>
     
