--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 
 <body>
 
-    <script src="index.js"></script>
-
     <h1>The Wheel Store</h1>
     <p>We Sell the Best Wheels in the World</p>
 
     <section class="container">
-        <div class="card">
+<!--         <div class="card">
             <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
             <a href="https://www.amazon.com/Electric-Wheelchair-Wheel-Polyurethane-Wheels/dp/B0CSPMVXDS">
                 <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
@@ -135,8 +133,10 @@
             </a>
             <h3 class="card-price">$74.98</h3>
             <button class = "btn">ADD TO CART</button>
-        </div>
+        </div> -->
+
     </section>
+    <script src="index.js"></script>
 
 </body>
 
