--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 <body>
 
-    <script src="index.js"></script>
 
     <h1>The Wheel Store</h1>
     <p>We Sell the Best Wheels in the World</p>
@@ -23,7 +22,7 @@
             <h3 class="card-price">$54.01</h3>
             <button class = "btn">ADD TO CART</button>
         </div>
-        <div class="card">
+        <!-- <div class="card">
             <h2 class="Card-Header">Western Style Wagon Wheel</h2>
             <a href="https://www.amazon.com/DaisyInner-Decorative-Western-Cartwheel-Farmhouse/dp/B0CNH491V3?th=1">
                 <img class="card-img"
@@ -135,8 +134,9 @@
             </a>
             <h3 class="card-price">$74.98</h3>
             <button class = "btn">ADD TO CART</button>
-        </div>
+        </div> -->
     </section>
+    <script src="index.js"></script>
 
 </body>
 
