--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <p>We Sell the Best Wheels in the World</p>
 
     <section class="container">
-         <div class="card">
+         <!-- <div class="card">
             <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
             <a href="https://www.amazon.com/Electric-Wheelchair-Wheel-Polyurethane-Wheels/dp/B0CSPMVXDS">
                 <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
             </a>
             <h3 class="card-price">$54.01</h3>
             <button class = "btn">ADD TO CART</button>
-        </div> 
+        </div>  -->
     </section>
     <script src="index.js"></script>
 
