--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>We Sell the Best Wheels in the World</p>
 
     <section class="container">
+        <div id = "card-display">
          <!-- <div class="card">
             <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
             <a href="https://www.amazon.com/Electric-Wheelchair-Wheel-Polyurethane-Wheels/dp/B0CSPMVXDS">
@@ -21,6 +22,7 @@
             <h3 class="card-price">$54.01</h3>
             <button class = "btn">ADD TO CART</button>
         </div>  -->
+        </div>
     </section>
     <script src="index.js"></script>
 
