--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
     <h1>The Wheel Store</h1>
     <p>We Sell the Best Wheels in the World</p>
+    <button class="filter-btn" data-type="All">All</button>
+    <button class="filter-btn" data-type="Vehicles">Vehicles</button>
+    <button class="filter-btn" data-type="Wooden">Wooden</button>
+    <button class="filter-btn" data-type="Gears">Gears</button>
+    <button class="filter-btn" data-type="Rubber">Rubber</button>
+    <button class="filter-btn" data-type="Extra">Extra</button>
+    
+
 
     <section class="container">
         <div id = "card-display">
