--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button class="filter-btn" data-type="All">All</button>
     <button class="filter-btn" data-type="Vehicles">Vehicles</button>
     <button class="filter-btn" data-type="Wooden">Wooden</button>
-    <button class="filter-btn" data-type="Gears">Gears</button>
+    <button class="filter-btn" data-type="Gears">Cogs</button>
     <button class="filter-btn" data-type="Rubber">Rubber</button>
     <button class="filter-btn" data-type="Extra">Extra</button>
     
