--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         </div>  -->
         </div>
     </section>
+
+    <div class = "cart">
+        <h4>Your Cart</h4>
+        <h5>Items:</h5>
+        <h6>Total: $0.00</h6>
+    </div>
     <script src="index.js"></script>
 
 </body>
