--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 
     <h1>The Wheel Store</h1>
     <p>We Sell the Best Wheels in the World</p>
-    <button class="filter-btn" data-type="All">All</button>
-    <button class="filter-btn" data-type="Vehicles">Vehicles</button>
-    <button class="filter-btn" data-type="Wooden">Wooden</button>
-    <button class="filter-btn" data-type="Gears">Cogs</button>
-    <button class="filter-btn" data-type="Rubber">Rubber</button>
-    <button class="filter-btn" data-type="Extra">Extra</button>
-    
+    <div class="btns">
+        <button class="filter-btn" data-type="All">All</button>
+        <button class="filter-btn" data-type="Vehicles">Vehicles</button>
+        <button class="filter-btn" data-type="Wooden">Wooden</button>
+        <button class="filter-btn" data-type="Gears">Cogs</button>
+        <button class="filter-btn" data-type="Rubber">Rubber</button>
+        <button class="filter-btn" data-type="Extra">Extra</button>
+    </div>
 
 
     <section class="container">
-        <div id = "card-display">
-         <!-- <div class="card">
+        <div id="card-display">
+            <!-- <div class="card">
             <h2 class="Card-Header">Electric Wheelchair Wheel</h2>
             <a href="https://www.amazon.com/Electric-Wheelchair-Wheel-Polyurethane-Wheels/dp/B0CSPMVXDS">
                 <img class="card-img" src="https://m.media-amazon.com/images/I/61P2PJFQzgL.jpg" alt="Wheel" />
@@ -33,7 +34,7 @@
         </div>
     </section>
 
-    <div class = "cart">
+    <div class="cart">
         <h4>Your Cart</h4>
         <h5>Items:</h5>
         <h6>Total: $0.00</h6>
