--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
         </div>
     </section>
 
-    <div class="cart">
+    <div class="cart" id="cart">
         <h4>Your Cart</h4>
         <h5>Items:</h5>
         <h6>Total: $0.00</h6>
     </div>
-    <script src="index.js"></script>
-
+    <script src="index.js"></script> 
 </body>
 
 </html>
