--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1>The Wheel Store</h1>
     <p>We Sell the Best Wheels in the World</p>
-    <div class="cart-btn">
+    <div class="cart-btn" id = "cart-btn">
         <button class="filter-btn" data-type="All">All</button>
         <button class="filter-btn" data-type="Vehicles">Vehicles</button>
         <button class="filter-btn" data-type="Wooden">Wooden</button>
