--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </div>
     </section>
 
-    <div class="cart" id="cart">
+
+    <div id="cart">
         <h4>Your Cart</h4>
         <h5>Items:</h5>
         <h6>Total: $0.00</h6>
